gcc/testsuite/rust/rustc/ui/expr/malformed_closure/ruby_style_closure_parse_error_dg.rs
//@ run-rustfix
fn main() {
    let _ = vec![1, 2, 3].into_iter().map({|x|
        let y = x; // { dg-error "" "" { target *-*-* } }
        y
    });
    let _: () = foo; // { dg-error ".E0308." "" { target *-*-* } }
}
fn foo() {}

